--- a/planner_service/pyproject.toml
+++ b/planner_service/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "grpcio>=1.76.0",
+    "grpcio-tools>=1.76.0",
     "ipykernel>=7.1.0",
     "langchain>=1.2.6",
     "langchain-community>=0.4.1",
