--- a/planner_service/pyproject.toml
+++ b/planner_service/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-mistralai>=1.1.1",
     "python-dotenv>=1.2.1",
+    "pyyaml>=6.0.3",
 ]
